--- a/tabs/mapstyle.css
+++ b/tabs/mapstyle.css
@@ -1,5 +1,3 @@
-#map {
-  height: 400px;
-  width: 100%;
-  background-color: white;  
-}
+ <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+crossorigin=""/>
