--- a/tabs/mapstyle.css
+++ b/tabs/mapstyle.css
@@ -1,7 +1,68 @@
-<link rel = "stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css">
-    <integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-    crossorigin=""/>
-    #map { height: 180px; }
-
-
-
+/* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+       #map {
+        position: absolute;
+        top: 80px;
+        left: 0;
+        width: 1280px;
+        height: 720px;
+        border: 3px solid #73AD21;
+        } 
+        /* Optional: Makes the sample page fill the window. */
+        html,
+        body {
+          position: relative;
+        height: 100%;
+        width: 70%;
+        /* margin: 0;
+        padding: 0; */
+        }
+    
+     /* #canvas {
+      position: absolute;
+      z-index: 999999
+     } */
+    
+     /* * { box-sizing: border-box; margin: 0; padding: 0; }
+    
+    #canvas-wrapper {
+      display: inline-block;
+      position: relative;
+      margin: 20px;
+    }
+    
+    #my_canvas-container {
+      position: absolute;
+      top: 0; right: 0; bottom: 0; left: 0;
+      z-index: 10;
+    }
+    #my_canvas-container > #my_canvas {
+      width: 100%;
+      height: 100%;
+    } */
+     #canvas {
+      
+      position: absolute;
+      top: 80px;
+      left: 0;
+      width: 1280px;
+      height: 720px;
+      border: 3px solid #73AD21;
+      } 
+      #container {
+       
+       position: absolute;
+       top: 80px;
+       left: 0;
+       width: 1280px;
+       height: 720px;
+       border: 3px solid #73AD21;
+       } 
+    /*   
+      border: 1px solid;
+      padding: 1px;
+      width: 100%;
+      margin: 1px;
+      display:flex;
+      justify-content:space-between;
+      } */ 
